--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
-<html lang="es">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/portafolio.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Laura Ortega - Portafolio</title>
+    <title>Laura Ortega - Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
